[metadata]
name = zarr-tools
description = Convert nd2 to zarr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BaroudLab/zarr-tools
author = Andrey Aristov
author_email = aaristov@pasteur.fr
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://gitlab.pasteur.fr/aaristov/zarr-tools/issues

[options]
packages = find:
install_requires =
    dask
    fire
    nd2
    zarr
    
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src


